force-app/main/default/objects/Case/fields/Restoration_Internal_By__c.field-meta.xml
<CustomField>
    <fullName>Restoration_Internal_By__c</fullName>
    <label>Restoration Internal By</label>
    <type>DateTime</type>
</CustomField>