force-app/main/default/objects/Case/fields/SContract_Business_Hour__c.field-meta.xml
<CustomField>
    <fullName>SContract_Business_Hour__c</fullName>
    <label>SContract Business Hour</label>
    <type>Text</type>
    <length>255</length>
</CustomField>