force-app/main/default/objects/Case/fields/SDG_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>SDG_Close_Reason__c</fullName>
    <label>Close Reason</label>
    <inlineHelpText>Closure category</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corrected</fullName>
            </value>
            <value>
                <fullName>Future Enhancement</fullName>
            </value>
            <value>
                <fullName>No Solution Found</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Trained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>