force-app/main/default/objects/Case/fields/SDG_Closure_Details__c.field-meta.xml
<CustomField>
    <fullName>SDG_Closure_Details__c</fullName>
    <label>Closure Details</label>
    <inlineHelpText>brief explanation of steps taken to close the case</inlineHelpText>
    <type>TextArea</type>
</CustomField>