force-app/main/default/objects/Case/fields/SDG_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>SDG_Request_Type__c</fullName>
    <label>Request Type</label>
    <inlineHelpText>Please categorise your request</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access/Permissions</fullName>
            </value>
            <value>
                <fullName>Data Issue</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Products / Pricing</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>