force-app/main/default/objects/Case/fields/SDG_Requestor__c.field-meta.xml
<CustomField>
    <fullName>SDG_Requestor__c</fullName>
    <label>Requestor</label>
    <inlineHelpText>Name of the user that the support team will contact for case resolution</inlineHelpText>
    <type>Text</type>
    <length>18</length>
</CustomField>