force-app/main/default/objects/Case/fields/SDG_Screen_Shot__c.field-meta.xml
<CustomField>
    <fullName>SDG_Screen_Shot__c</fullName>
    <label>Screen Shot</label>
    <inlineHelpText>Please paste any supporting screen shots in here</inlineHelpText>
    <type>Html</type>
    <length>32768</length>
</CustomField>