force-app/main/default/objects/Case/fields/SDG_Status_Category__c.field-meta.xml
<CustomField>
    <fullName>SDG_Status_Category__c</fullName>
    <label>Status Category</label>
    <inlineHelpText>Internal Tracking - managed by IT</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Researching</fullName>
            </value>
            <value>
                <fullName>Solution Identified</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>