force-app/main/default/objects/Case/fields/SDG_Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>SDG_Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <inlineHelpText>Managed by IT</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>