force-app/main/default/objects/Case/fields/SDG_Tier__c.field-meta.xml
<CustomField>
    <fullName>SDG_Tier__c</fullName>
    <label>Tier</label>
    <inlineHelpText>Used by Analyst for support categorization</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I - Business</fullName>
            </value>
            <value>
                <fullName>II - EAS Consultants</fullName>
            </value>
            <value>
                <fullName>III - EAS Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>