force-app/main/default/objects/Case/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <label>Service/Maintenance Contract</label>
    <inlineHelpText>Name of the service contract. Is a lookup to an existing service contract in ServiceMax</inlineHelpText>
    <type>Text</type>
    <length>18</length>
</CustomField>