force-app/main/default/objects/Case/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <label>Service Request</label>
    <inlineHelpText>Relation to Service Request</inlineHelpText>
    <type>Text</type>
    <length>18</length>
</CustomField>