force-app/main/default/objects/Case/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Location</label>
    <inlineHelpText>The customer location where the contact is reporting the problem or the location of the installed product.</inlineHelpText>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Location Cases</relationshipLabel>
    <relationshipName>Location_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>