force-app/main/default/objects/Case/fields/SLA_Clock_Extension_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SLA_Clock_Extension_Minutes__c</fullName>
    <label>SLA Clock Extension Minutes</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>