force-app/main/default/objects/Case/fields/SLA_Clock_Pause_Restart_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Clock_Pause_Restart_Time__c</fullName>
    <label>SLA Clock Pause Restart Time</label>
    <type>DateTime</type>
</CustomField>