force-app/main/default/objects/Case/fields/SLA_Terms__c.field-meta.xml
<CustomField>
    <fullName>SLA_Terms__c</fullName>
    <label>SLA Terms</label>
    <inlineHelpText>Service Level the customer is entitled to by this contract. Is a lookup to an existing service level record.</inlineHelpText>
    <type>Text</type>
    <length>18</length>
</CustomField>