force-app/main/default/objects/Case/fields/SM_Change_Order__c.field-meta.xml
<CustomField>
    <fullName>SM_Change_Order__c</fullName>
    <label>Change Order</label>
    <inlineHelpText>This field is used to associate the Case with Change Order.</inlineHelpText>
    <type>Text</type>
    <length>18</length>
</CustomField>