force-app/main/default/objects/Case/fields/SM_Is_FCO_Case__c.field-meta.xml
<CustomField>
    <fullName>SM_Is_FCO_Case__c</fullName>
    <label>Is FCO Case</label>
    <inlineHelpText>This field is used to indicate whether the Case is created from the Change Order process.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>