force-app/main/default/objects/Case/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <type>Text</type>
    <length>18</length>
</CustomField>