force-app/main/default/objects/Case/fields/Subject_Translated__c.field-meta.xml
<CustomField>
    <fullName>Subject_Translated__c</fullName>
    <label>Subject (Translated)</label>
    <inlineHelpText>Disclaimer: This text has been translated by AI. Minor differences from the original may be present, but the overall intent and meaning remain unchanged.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>