force-app/main/default/objects/Case/fields/Support_contact__c.field-meta.xml
<CustomField>
    <fullName>Support_contact__c</fullName>
    <label>Support contact</label>
    <type>Email</type>
</CustomField>