force-app/main/default/objects/Case/fields/Support_Description__c.field-meta.xml
<CustomField>
    <fullName>Support_Description__c</fullName>
    <label>Support Description</label>
    <inlineHelpText>Description used for System support</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>