force-app/main/default/objects/Case/fields/Support_URL__c.field-meta.xml
<CustomField>
    <fullName>Support_URL__c</fullName>
    <label>Support URL</label>
    <inlineHelpText>Link to factory support page</inlineHelpText>
    <type>LongTextArea</type>
    <length>1500</length>
</CustomField>