force-app/main/default/objects/Case/fields/Survey_Monkey_NPS__c.field-meta.xml
<CustomField>
    <fullName>Survey_Monkey_NPS__c</fullName>
    <label>NPS Score</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>