force-app/main/default/objects/Case/fields/Survey_Monkey_NPS_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Survey_Monkey_NPS_Feedback__c</fullName>
    <label>NPS Feedback</label>
    <type>TextArea</type>
</CustomField>