force-app/main/default/objects/Case/fields/Symptom__c.field-meta.xml
<CustomField>
    <fullName>Symptom__c</fullName>
    <label>Symptom</label>
    <type>Text</type>
    <length>18</length>
</CustomField>