force-app/main/default/objects/Case/fields/TF_Business_unit__c.field-meta.xml
<CustomField>
    <fullName>TF_Business_unit__c</fullName>
    <label>Business unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aesku</fullName>
            </value>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>Autoimmunity</fullName>
            </value>
            <value>
                <fullName>BAI-Clinical</fullName>
            </value>
            <value>
                <fullName>BAI-Industrial</fullName>
            </value>
            <value>
                <fullName>BAI-KRYPTOR</fullName>
            </value>
            <value>
                <fullName>BAI-RIA</fullName>
            </value>
            <value>
                <fullName>BAI-TCA</fullName>
            </value>
            <value>
                <fullName>BION</fullName>
            </value>
            <value>
                <fullName>Niche-DAT</fullName>
            </value>
            <value>
                <fullName>Niche-Mindray</fullName>
            </value>
            <value>
                <fullName>Niche-Particles</fullName>
            </value>
            <value>
                <fullName>Niche-QC</fullName>
            </value>
            <value>
                <fullName>Niche-TDM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sebia</fullName>
            </value>
            <value>
                <fullName>TCA</fullName>
            </value>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>