force-app/main/default/objects/Case/fields/TF_Component_firmware__c.field-meta.xml
<CustomField>
    <fullName>TF_Component_firmware__c</fullName>
    <label>Component firmware</label>
    <type>Text</type>
    <length>255</length>
</CustomField>