force-app/main/default/objects/Case/fields/TF_Component_Retrofit_Method__c.field-meta.xml
<CustomField>
    <fullName>TF_Component_Retrofit_Method__c</fullName>
    <label>Component Retrofit/Method</label>
    <type>Text</type>
    <length>255</length>
</CustomField>