force-app/main/default/objects/Case/fields/TF_Component_software__c.field-meta.xml
<CustomField>
    <fullName>TF_Component_software__c</fullName>
    <label>Component software</label>
    <type>Text</type>
    <length>255</length>
</CustomField>