force-app/main/default/objects/Case/fields/TF_Country__c.field-meta.xml
<CustomField>
    <fullName>TF_Country__c</fullName>
    <label>Country</label>
    <type>Text</type>
    <length>255</length>
</CustomField>