force-app/main/default/objects/Case/fields/TF_NLP__c.field-meta.xml
<CustomField>
    <fullName>TF_NLP__c</fullName>
    <label>NLP</label>
    <inlineHelpText>Results from Natural Language Processing</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>