force-app/main/default/objects/Case/fields/Time_to_Onsite_Response__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Onsite_Response__c</fullName>
    <label>Time to Onsite Response (in Minutes)</label>
    <inlineHelpText>Time taken to onsite response as per commitment in SLA.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>