force-app/main/default/objects/Case/fields/Time_to_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Resolve__c</fullName>
    <label>Time to Resolve (in Minutes)</label>
    <inlineHelpText>Time taken to resolve as per commitment in SLA.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>