force-app/main/default/objects/Case/fields/Top_Level__c.field-meta.xml
<CustomField>
    <fullName>Top_Level__c</fullName>
    <label>Product/System</label>
    <inlineHelpText>Serial number of the top-level installed product to which the component belongs. Is a lookup to an existing installed product record in ServiceMax.</inlineHelpText>
    <type>Text</type>
    <length>18</length>
</CustomField>