force-app/main/default/objects/Case/fields/Total_Activity_Time_minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Activity_Time_minutes__c</fullName>
    <label>Total Activity Time (minutes)</label>
    <inlineHelpText>Calculated by default flow sunming the related Event duration</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>