force-app/main/default/objects/Case/fields/URL_Link__c.field-meta.xml
<CustomField>
    <fullName>URL_Link__c</fullName>
    <label>URL Link</label>
    <type>Url</type>
</CustomField>