force-app/main/default/objects/Case/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <label>Warranty</label>
    <inlineHelpText>Product Warranty</inlineHelpText>
    <type>Text</type>
    <length>18</length>
</CustomField>