force-app/main/default/objects/Case/fields/WO_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>WO_Closed_Date__c</fullName>
    <label>WO Closed Date</label>
    <type>Date</type>
</CustomField>