force-app/main/default/objects/Case/fields/Work_Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Created__c</fullName>
    <label>Work Order Created</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>