force-app/main/default/objects/Case/fields/Work_Orders_Created__c.field-meta.xml
<CustomField>
    <fullName>Work_Orders_Created__c</fullName>
    <label>Number of Work Orders Created</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>