force-app/main/default/objects/Case/fields/Zinc_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Zinc_Conversation__c</fullName>
    <label>Zinc Conversation</label>
    <inlineHelpText>View this object&apos;s conversation in Zinc</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>