force-app/main/default/objects/Case/fields/Zinc_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Zinc_External_Id__c</fullName>
    <label>Zinc External Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>