force-app/main/default/objects/Case/fields/Zinc_Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Zinc_Message_Body__c</fullName>
    <label>Zinc Message Body</label>
    <type>Text</type>
    <length>255</length>
</CustomField>